--- a/.gitconfig
+++ b/.gitconfig
@@ -96,6 +96,9 @@
 	# http://michael-kuehnel.de/git/2014/11/21/git-mac-osx-and-german-umlaute.html
 	precomposeunicode = false
 
+  # Set sublime text as the default text editor
+  editor = subl -n -w
+
 [color]
 
 	# Use colors in Git commands that are capable of colored output when
@@ -164,3 +167,8 @@
 [url "git://gist.github.com/"]
 
 	insteadOf = "gist:"
+
+[user]
+
+name = "Chris Woodley"
+email = chriswoodley@me.com
