add author and email to gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -184,3 +184,8 @@
 [url "git://gist.github.com/"]
 
     insteadOf = "gist:"
+
+[user]
+
+    name = "Chris Woodley"
+    email = "chriswoodley@me.com"
